test-suite/tests/snapshots/cli_klx_tests__klx9001_special_char.snap
---
source: test-suite/tests/cli_klx_tests.rs
expression: result.stderr
---
KLX9001

  × unknown lexing error: expected :, found #
   ╭─[./tmp/cli_test_klx9001_special_char/pkg/schema/lib.ks:5:10]
 1 │ namespace pkg;
 2 │ 
 3 │ struct User {
 4 │     name: str,
 5 │     email# str
   ·          ┬
   ·          ╰── unknown lexing error: expected :, found #
 6 │ };
   ╰────
